Fixed jumping spinner on import progress step

--- a/app/styles/components/modals.css
+++ b/app/styles/components/modals.css
@@ -136,6 +136,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-end;
     min-height: 124px;
 }
 
